page home front finish

--- a/front/html/home.html
+++ b/front/html/home.html
@@ -12,20 +12,30 @@
         <form action="" method="get">
             <div class="box_form">
                 <div>
-                    <div class="label_Email">Email</div>
-                    <div class="box_Email_input">
-                        <input type="text" name="userEmail" id="userEmail" required class="Email_input"/>
+                    <div class="display_flex">
+                        <div class="label_Email">Email</div>
+                    </div>
+
+                    <div class="display_flex">    
+                        <div class="box_Email_input">
+                            <input type="text" name="userEmail" id="userEmail" required class="Email_input"/>
+                        </div>
                     </div>
                 </div>
                 <div>
-                    <div class="label_password">Mot de passe</div>
-                    <div class="box_password_input">
-                        <input type="password" name="userPassword" id="userPassword" required class="password_input"/>
+                    <div class="display_flex">
+                        <div class="label_password">Mot de passe</div>
+                    </div>
+
+                    <div class="display_flex">
+                        <div class="box_password_input">
+                            <input type="password" name="userPassword" id="userPassword" required class="password_input"/>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="box_connect_me">
-            <input type="submit" value="Me connecter" />
+                <input type="submit" value="Me connecter" class="connect_me_input" />
             </div>
         </form>
     </div>
