--- a/front/html/home.html
+++ b/front/html/home.html
@@ -9,13 +9,12 @@
 <body>
     <div>
         <img src="../img/logo.png" alt="logo" class="logo">
-        <form action="" method="get">
+        <form method="post">
             <div class="box_form">
                 <div>
                     <div class="display_flex">
                         <div class="label_Email">Email</div>
                     </div>
-
                     <div class="display_flex">    
                         <div class="box_Email_input">
                             <input type="text" name="userEmail" id="userEmail" required class="Email_input"/>
