add supplier page

--- a/front/html/sites.html
+++ b/front/html/sites.html
@@ -29,7 +29,7 @@
       </form>
 
       <img class="logo" src="../img/logo2.png" alt="" />
-      <a class="btnNav" href="">Producteurs</a>
+      <a class="btnNav" href="/Supplier">Producteurs</a>
     </nav>
     <main>
       <section class="store">
