--- a/front/html/supplier.html
+++ b/front/html/supplier.html
@@ -9,7 +9,7 @@
   <body>
 
     <nav>
-      <a class="btnNav" href="/Sites">Sites</a>
+      <a class="btnNav" href="/Sites/Paris">Sites</a>
       <img class="logo" src="../img/logo2.png" alt="" />
       <a></a>
     </nav>
