:memo: | update gitignore (.mod and .sum) | :lipstick: | improve btns in sites and supplier | :fire: | remove usless css

--- a/front/html/sites.html
+++ b/front/html/sites.html
@@ -13,10 +13,14 @@
           <option disabled selected>Sites</option>
           <option value="http://localhost:8080/Sites/Paris">Paris</option>
           <option value="http://localhost:8080/Sites/Nantes">Nantes</option>
-          <option value="http://localhost:8080/Sites/Marseille">Marseille</option>
+          <option value="http://localhost:8080/Sites/Marseille">
+            Marseille
+          </option>
           <option value="http://localhost:8080/Sites/Lille">Lille</option>
           <option value="http://localhost:8080/Sites/Bordeaux">Bordeaux</option>
-          <option value="http://localhost:8080/Sites/Strasbourg">Strasbourg</option>
+          <option value="http://localhost:8080/Sites/Strasbourg">
+            Strasbourg
+          </option>
           <option value="http://localhost:8080/Sites/Lyon">Lyon</option>
         </select>
       </div>
@@ -64,10 +68,10 @@
     </footer>
     <script>
       function changerPage(selectElement) {
-          var selectedValue = selectElement.value;
-          if (selectedValue) {
-              window.location = selectedValue;
-          }
+        var selectedValue = selectElement.value;
+        if (selectedValue) {
+          window.location = selectedValue;
+        }
       }
     </script>
   </body>
