:sparkles: | add employee

--- a/front/html/sites.html
+++ b/front/html/sites.html
@@ -27,7 +27,51 @@
       <img class="logo" src="../img/logo2.png" alt="" />
       <a class="btnNav" href="/Supplier">Producteurs</a>
     </nav>
+    <form method="post" >
+      <button name="work" type="submit" value="work">    
+          Travailler / Quitter le travail
+      </button>
+      <button name="disconnect" type="submit" value="disconnect">    
+        Déconnecter
+    </button>
+  </form>
     <main>
+      <section class="supplier">
+        <form method="post">
+          
+          <div >Prénom</div>            
+          <input type="text" name="firstName" id="firstName" required/>
+                  
+          <div >Nom</div>            
+          <input type="text" name="lastName" id="lastName" required />
+
+          <div >numéro de téléphone</div>            
+          <input type="text" name="phone" id="phone" required />
+
+          <div >mail</div>            
+          <input type="mail" name="mail" id="mail" required />
+
+          <div >mot de passe</div>            
+          <input type="text" name="password" id="password" required />
+
+          <div >IBAN</div>            
+          <input type="text" name="IBAN" id="IBAN" required />
+
+          <div >Date de naissance (type 2004-11-24)</div>            
+          <input type="text" name="birthDate" id="birthDate" required />
+
+          <div >Métier</div>
+          <select name="profession" id="profession">
+            <option value="1">Directeur</option>
+            <option value="2">RH</option>
+            <option value="3">Marcket Com</option>
+            <option value="4">Commercial</option>
+            <option value="5">Gérant de site</option>
+            <option value="6">Chef d'équipe</option>
+            <option value="7">Vendeur</option>
+          </select>
+          <input type="submit" value="créer"  />
+        </form>
       <section class="store">
         <section class="cardImgStore">
           <img class="imgExt" src="../img/Décantez-vous-store.png" alt="" />
