--- a/front/html/sites.html
+++ b/front/html/sites.html
@@ -95,7 +95,23 @@
         <section class="cardOfEmployee">
           <img class="imgOfEmployee" src="../img/logo2.png" alt="" />
           <h2>{{ $instance.LastName }} {{ $instance.FirstName }}</h2>
-          <h3 class="type">{{$instance.Job}}</h3>
+          <h3 class="type">{{$instance.Job}}
+            {{ if $instance.IsPays}}
+            <form method="post">
+              <select name="changeWork">
+                <option disabled selected>poste</option>
+                <option value="1,{{ $instance.IdEmployee }}">Directeur</option>
+                <option value="2,{{ $instance.IdEmployee }}">RH</option>
+                <option value="3,{{ $instance.IdEmployee }}">Marcket Com</option>
+                <option value="4,{{ $instance.IdEmployee }}">Commercial</option>
+                <option value="5,{{ $instance.IdEmployee }}">Gérant de site</option>
+                <option value="6,{{ $instance.IdEmployee }}">Chef d'équipe</option>
+                <option value="7,{{ $instance.IdEmployee }}">Vendeur</option>
+              </select>
+              <input type="submit" value="changer"  />
+            </form>
+            {{end}}
+          </h3>
           {{ if .IsPays}}
               {{ if .IsWorking}}
                 <p>travaille</p>
